kubernetes/base/frontgate/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: khaleesi-ninja-ingress-class
  rules:
    - host: "khaleesi.ninja"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  name: service
